wallpaperinterface: Update "contextualActions" after clearing actions

After clearing the entire action collection, "contextualActions" needs
to be updated to remove invalid action pointers.

BUG: 446195