src/scriptengines/qml/plasmoid/wallpaperinterface.cpp
@@ -115,6 +115,7 @@ void WallpaperInterface::syncWallpaperPackage()
     }
 
     m_actions->clear();
+    setProperty("contextualActions", QVariant::fromValue(contextualActions()));
     m_pkg = KPackage::PackageLoader::self()->loadPackage(QStringLiteral("Plasma/Wallpaper"));
     m_pkg.setPath(m_wallpaperPlugin);
     if (!m_pkg.isValid()) {
